docs: 교차검증 감사 잔여 항목 반영 (P1 최신성, 내부 정합성, 구조)
- RFC 최신화: Problem Details 9457, HTTP/2 9113, HTTP/1.1 메시징 9112
- JVM: jaotc 제거(JEP 410), FFM API JDK 22 정식화, ZGC와 Shenandoah 버전 caveat
- AI 도구: Codex CLI 설치 방법, Claude Code --bare 실측 보정, Harness Engineering 원문 출처, MIT NANDA와 METR 수치에 실험 조건과 출처 부기
- DB: MySQL 스레드 풀 에디션 구분, Online DDL 락 단정 완화, Valkey 호환 범위 제한
- 내부 정합성: 테스트 트랜잭션 롤백 톤 분리, Spring Data JPA provider 분리, libuv threadpool 정렬, Blue-Green 연결 caveat, Outbox at-least-once, enum 기준 통일
- 구조: IT-Downturn 문서를 Parent-as-TOC 패턴으로 분할, 검증 기준일 표기 추가

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>